# waterpi-sprinkler

./: .gitignore  CLAUDE.md  README.md  hacs.json
.github/workflows/: validate.yml
custom_components/waterpi_sprinkler/: __init__.py  const.py  manifest.json  sensor.py  valve.py
daemon/: Cargo.toml  Makefile  config.example.toml  waterpi-sprinkler.service
daemon/src/: api.rs  config.rs  ha.rs  main.rs  sprinkler.rs
