[package]
name = "waterpi-sprinkler"
version = "0.1.0"
edition = "2024"
description = "GPIO sprinkler controller daemon for Raspberry Pi"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rppal = { version = "0.19" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
